Catch No RPC connection errors, fix button styling/spacing, add commented out override option for Dai.sol to test < 18 decimal places, test values slighyly larger (less decimal places)

--- a/styles/MySwaps.module.css
+++ b/styles/MySwaps.module.css
@@ -35,7 +35,7 @@
 .TableButtons {
     vertical-align: middle;
     width: 100%;
-    margin-bottom: 5%;
+    margin-top: 5%;
     align-items: center;
     justify-content: center;
     white-space: nowrap;
